Fix collapsing multiline text because of extra markup appearing in the line

BUG:399227